# momentum-2025

./: demo.html  demo1.html  demo2.html  elixirconf.md  index.html  index.md  notes.md  package-lock.json  package.json
additional-greeting/: README.md  additional-greeting.wasm  bindgen.sh  build.sh  go.mod  local:additional-greeting.wasm  local:additional-greeting@0.0.1.wasm  main.go
additional-greeting/wit/: additional-greeting.wit
collectem/: .gitignore  Makefile  README.md  dc_component.go  edgee-component.toml  go.mod  go.sum  main.go
composed-hello-world/: Cargo.toml  build.sh  compose.sh  composed-hello-world.core.wasm  composed-hello-world.core2.wasm  composed-hello-world.d.ts  composed-hello-world.js  composed-hello-world.wasm
composed-hello-world/interfaces/: wasi-filesystem-types.d.ts
composed-hello-world/src/: bindings.rs  lib.rs
composed-hello-world/wit/: world.wit
hello-spin/: spin.toml
hello-wasi-http/: Cargo.toml  hello_composed_http.wasm  start.sh
hello-wasi-http/src/: bindings.rs  lib.rs
hello-wasi-http/wit/: world.wit
hello-world/: Cargo.toml  build.sh  hello_world.core.wasm  hello_world.d.ts  hello_world.js
hello-world-go/: component:hello-world.wasm  go.mod  hello-world-go.core.wasm  hello-world-go.d.ts  hello-world-go.js  hello-world-go.wasm  main.go
hello-world-go/interfaces/: wasi-filesystem-types.d.ts
hello-world-go/wit/: world.wit
hello-world/src/: bindings.rs  lib.rs
hello-world/wit/: world.wit
qrcode-wasm/: qr_code.d  qr_code.policy.yaml
shipping-calculator/: shipping-calculator.js  shipping-calculator.wit
(+45 files in other folders)
