[package]
name = "hello-wasi-http"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:hello-wasi-http"
# This tells cargo-component to use a special adapter, which doesn't depend on
# `get-environment` or other things not present in the proxy world.

[package.metadata.component.dependencies]

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/wasi-http-0.2.3" }
"wasi:clocks" = { path = "wit/deps/wasi-clocks-0.2.3" }
"wasi:io" = { path = "wit/deps/wasi-io-0.2.3" }
"wasi:random" = { path = "wit/deps/wasi-random-0.2.3" }
"wasi:cli" = { path = "wit/deps/wasi-cli-0.2.3" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }
